Fix checkamrk bullet alignment, Ref: DEV-701

--- a/content/themes/dude/blocks/pricing-category/src/style.scss
+++ b/content/themes/dude/blocks/pricing-category/src/style.scss
@@ -318,6 +318,7 @@
     height: 20px;
     left: 0;
     position: absolute;
+    top: 2px;
     width: 20px;
   }
 
